data/test/method_as_function/negative/9502.js
// This tests parameters with incorrectly quoted names
const axios = require('axios');
axios.get('https://petstore.swagger.io/v2/emoji.list', {
  params: {
    'foo-bar: true
  }
});